--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -3,7 +3,7 @@
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr><td>Day-1</td> <td>Introduction to Genomics Data, Data Organization, Unix/Shell and Cloud</td></tr>
-    <table>
+    	<table>
 	    <tr> <td>9:00</td>  <td><a href="http://www.datacarpentry.org/organization-genomics/"><b>Data Organization</b></a></td></tr>
 	    <tr><td>10:30</td><td><a href="http://www.datacarpentry.org/shell-genomics/"><b>Introduction to the command line</b></a></td></tr>
 	    <tr> <td>12:00</td><td>Lunch break</td> </tr>
@@ -17,13 +17,14 @@
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr> <td>Day-2</td> <td>Data Wrangling, Pipeline and R for Genomics</td></tr>
-    <table>
+    	<table>
       	    <tr> <td>9:00</td>  <td><a href="http://www.datacarpentry.org/wrangling-genomics/"><b>Data Wrangling and pipeline</b></a></td></tr>
 	    <tr><td>10:30</td><td><a href="http://www.datacarpentry.org/R-genomics/"><b>R for Genomics</b></a></td></tr>
 	    <tr> <td>12:00</td><td>Lunch break</td> </tr>
 	    <tr><td>13:30</td><td><a href="http://www.datacarpentry.org/R-genomics/"><b>R for Genomics (continued)</b></a></td></tr>
 	    <tr> <td>15:00</td><td>Open session</td></tr>
 	    <tr> <td>16:30</td><td>End of Day-2</td> </tr>
+	</table>
     </table>
   </div>
 </div>
