--- a/_includes/dc/intro.html
+++ b/_includes/dc/intro.html
@@ -3,11 +3,8 @@
   aims to help researchers get their work done
   in less time and with less pain
   by teaching them basic research computing skills.
-  This hands-on workshop will cover basic concepts and tools,
-  including program design, version control, data management,
-  and task automation.
-  Participants will be encouraged to help one another
-  and to apply what they have learned to their own research problems.
+  This workshop will introduce toolsets and teach skills for data organization, cleaning and exploration to life science researchers.Participants will be encouraged to help one another and to apply what they have learned to their own research problems.
+  The focus will be on genomic data, however, the skills learned are applicable to all research fields.
 </p>
 <p align="center">
   <em>
@@ -15,4 +12,6 @@
     please see our paper
     "<a href="http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001745">Best Practices for Scientific Computing</a>".
   </em>
+  <em>
+    to attend the inaugural Conference "<a href="http://carpentrycon.org/"><strong>CarpentryCon 2018</strong></a>" that will be hosted right after this course from May 30th to June 1st 2018 at the O'Brien Centre for Science of University College Dublin (http://www.ucd.ie/).
 </p>
