--- a/_includes/dc/intro.html
+++ b/_includes/dc/intro.html
@@ -12,6 +12,7 @@
     please see our paper
     "<a href="http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001745">Best Practices for Scientific Computing</a>".
   </em>
-  <em>
-    to attend the inaugural Conference "<a href="http://carpentrycon.org/"><strong>CarpentryCon 2018</strong></a>" that will be hosted right after this course from May 30th to June 1st 2018 at the O'Brien Centre for Science of University College Dublin (http://www.ucd.ie/).
+</p>
+<p> 
+Interested participants are invited to attend the inaugural Conference CarpentryCon that will be hosted right after this course from May 30th to June 1st 2018 at the O'Brien Centre for Science of University College Dublin (http://www.ucd.ie/). Please see the "<a href="http://carpentrycon.org/">conference website</a>" or contact the organisers for more information.
 </p>
