--- a/_includes/dc/intro.html
+++ b/_includes/dc/intro.html
@@ -14,5 +14,5 @@
   </em>
 </p>
 <p> 
-Interested participants are invited to attend the inaugural Conference CarpentryCon that will be hosted right after this course from May 30th to June 1st 2018 at the O'Brien Centre for Science of University College Dublin (http://www.ucd.ie/). Please see the "<a href="http://carpentrycon.org/">conference website</a>" or contact the organisers for more information.
+Interested participants are invited to attend the <strong>inaugural Conference CarpentryCon</strong> that will be hosted right after this course from May 30th to June 1st 2018 at the O'Brien Centre for Science of University College Dublin (http://www.ucd.ie/). Please see the "<a href="http://carpentrycon.org/">conference website</a>" or contact the organisers for more information.
 </p>
