--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -22,7 +22,7 @@
 	    <tr><td>10:30</td><td><a href="http://www.datacarpentry.org/R-genomics/"><b>R for Genomics - 1</b></a></td></tr>
 	    <tr> <td>12:00</td><td>Lunch break</td> </tr>
 	    <tr><td>13:30</td><td><a href="http://www.datacarpentry.org/R-genomics/"><b>R for Genomics - 2</b></a></td></tr>
-	    <tr> <td>15:00</td><td>R for Genomics - 3</td></tr>
+	    <tr><td>15:00</td><td><a href="http://www.datacarpentry.org/R-genomics/"><b>R for Genomics - 3</b></a></td></tr>
 	    <tr> <td>16:30</td><td>Wrap up, Feedback, End of Day-2</td> </tr>
 	</table>
     </table>
