Fixing some links

--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -4,11 +4,11 @@
     <table class="table table-striped">
       <tr><td>Day-1</td> <td>Introduction to Genomics Data, Data Organization, Unix/Shell and Pipeline</td></tr>
     	<table>
-	    <tr> <td>09:00</td>  <td><a href="http://www.datacarpentry.org/organization-genomics/"><b>Data Organization and Cloud Genomics</b></a></td></tr>
-	    <tr><td>10:30</td><td><a href="http://www.datacarpentry.org/cloud-genomics/"><b>Introduction to Command line</b></a></td></tr>
+	    <tr> <td>09:00</td>  <td><b><a href="http://www.datacarpentry.org/organization-genomics/">Data Organization</a> and <a href="http://www.datacarpentry.org/cloud-genomics/">Cloud Genomics</a></b></td></tr>
+	    <tr><td>10:30</td><td><a href="http://www.datacarpentry.org/shell-genomics/"><b>Introduction to Command line</b></a></td></tr>
 	    <tr> <td>12:00</td><td>Lunch break</td> </tr>
 	    <tr><td>13:30</td><td><a href="http://www.datacarpentry.org/shell-genomics/"><b>Command line - continued</b></a></td></tr>
-	    <tr> <td>15:00</td><td><a href="http://www.datacarpentry.org/shell-genomics/"><b>Data Wrangling and pipeline</b></a></td></tr>
+	    <tr> <td>15:00</td><td><a href="http://www.datacarpentry.org/wrangling-genomics/"><b>Data Wrangling and pipeline</b></a></td></tr>
 	    <tr> <td>16:30</td><td>Feedback, End of Day-1</td> </tr>
   	</table>
     </table>
@@ -18,7 +18,7 @@
     <table class="table table-striped">
       <tr> <td>Day-2</td> <td>Recap, R for Genomics, dplyr, ggplot</td></tr>
     	<table>
-      	    <tr> <td>09:00</td>  <td><a href="http://www.datacarpentry.org/wrangling-genomics/"><b>Recap & Introduction to R</b></a></td></tr>
+      	    <tr> <td>09:00</td>  <td><a href="http://www.datacarpentry.org/R-genomics/"><b>Recap & Introduction to R</b></a></td></tr>
 	    <tr><td>10:30</td><td><a href="http://www.datacarpentry.org/R-genomics/"><b>R for Genomics - 1</b></a></td></tr>
 	    <tr> <td>12:00</td><td>Lunch break</td> </tr>
 	    <tr><td>13:30</td><td><a href="http://www.datacarpentry.org/R-genomics/"><b>R for Genomics - 2</b></a></td></tr>
